[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sounds/sfx/footstep_zapsplat.mp3" type="AudioStream" id=2]
[ext_resource path="res://Sounds/sfx/freq_drop_soundscrate.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/sfx/projector_soundscrate.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/sfx/radar_zapsplat.mp3" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.395691, 0.368879, 0.55 )

[sub_resource type="ProceduralSky" id=8]
sky_top_color = Color( 0.113725, 0.113725, 0.113725, 1 )
sky_horizon_color = Color( 0, 0, 0, 1 )

[sub_resource type="Environment" id=7]
background_mode = 3
background_sky = SubResource( 8 )
background_energy = 0.3
tonemap_mode = 1
glow_enabled = true

[sub_resource type="PrismMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 0.309804, 0.309804, 1 )
emission_enabled = true
emission = Color( 1, 0.309804, 0.309804, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Animation" id=4]
resource_name = "Flashlight_idle"
loop = true

[sub_resource type="Animation" id=2]
resource_name = "Flashlight_run"
length = 0.6
loop = true
step = 0.05

[sub_resource type="Animation" id=3]
length = 0.001

[node name="PlayerBody" type="KinematicBody"]
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionShape1" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.530128, -0.0103946 )
shape = SubResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.580671, -0.0103946 )
shape = SubResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( -1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0.9, 0.2 )

[node name="Camera" type="Camera" parent="CameraPivot"]
cull_mask = 1048573
current = true

[node name="RayCast" type="RayCast" parent="CameraPivot/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 26

[node name="EnemySpawner" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.81101 )

[node name="MapCam" type="Camera" parent="."]
transform = Transform( -1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 35.1582, 0 )
cull_mask = 1048547
environment = SubResource( 7 )
fov = 80.0

[node name="PlayerInMap" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.43282e-09, -0.101411, 0, 1, -4.37114e-08, 0, 2.81243, 0 )
layers = 2
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flashlight_idle = SubResource( 4 )
anims/Flashlight_run = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -1.0
pitch_scale = 0.7
bus = "SFX"

[node name="OnOffMap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MapLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="Radar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.8
bus = "SFX"
